--- a/UTOPIA/UTOPIA.csproj
+++ b/UTOPIA/UTOPIA.csproj
@@ -78,6 +78,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Script\AlphaBlend.cs" />
     <Compile Include="Assets\Script\InputManager.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
