--- a/UTOPIA/UTOPIA.csproj
+++ b/UTOPIA/UTOPIA.csproj
@@ -78,8 +78,10 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\Script\AlphaBlend.cs" />
     <Compile Include="Assets\Script\InputManager.cs" />
+    <Compile Include="Assets\Script\MainManager.cs" />
+    <Compile Include="Assets\Script\MouseCursor.cs" />
+    <Compile Include="Assets\Script\VideoStream.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
