--- a/Utopia (develop)-수정/Utopia (develop)-수정.csproj
+++ b/Utopia (develop)-수정/Utopia (develop)-수정.csproj
@@ -76,6 +76,9 @@
     <Reference Include="UnityEditor">
       <HintPath>Library\UnityAssemblies\UnityEditor.dll</HintPath>
     </Reference>
+    <Reference Include="Facebook.Unity.Settings">
+      <HintPath>Library\FacebookSDK\Facebook.Unity.Settings.dll</HintPath>
+    </Reference>
     <Reference Include="LitJson">
       <HintPath>Assets\Resources\LitJson.dll</HintPath>
     </Reference>
@@ -86,6 +89,7 @@
     <Compile Include="Assets\Script\HK\HintManager.cs" />
     <Compile Include="Assets\Script\HK\InputManager.cs" />
     <Compile Include="Assets\Script\HK\Inventory.cs" />
+    <Compile Include="Assets\Script\HK\MainScript.cs" />
     <Compile Include="Assets\Script\HK\MouseCursor.cs" />
     <Compile Include="Assets\Script\HK\UIManager.cs" />
     <Compile Include="Assets\Script\HK\VideoStream.cs" />
