--- a/Utopia (develop)-수정/Utopia (develop)-수정.csproj
+++ b/Utopia (develop)-수정/Utopia (develop)-수정.csproj
@@ -87,7 +87,7 @@
     <Compile Include="Assets\Script\HK\BGM.cs" />
     <Compile Include="Assets\Script\HK\EndManager.cs" />
     <Compile Include="Assets\Script\HK\HintManager.cs" />
-    <Compile Include="Assets\Script\HK\InputField.cs" />
+    <Compile Include="Assets\Script\HK\InputFieldManager.cs" />
     <Compile Include="Assets\Script\HK\InputManager.cs" />
     <Compile Include="Assets\Script\HK\Inventory.cs" />
     <Compile Include="Assets\Script\HK\MainScript.cs" />
