--- a/Utopia (develop)-수정/Utopia (develop)-수정.csproj
+++ b/Utopia (develop)-수정/Utopia (develop)-수정.csproj
@@ -102,6 +102,7 @@
     <Compile Include="Assets\Script\SB\PlayerControl.cs" />
     <Compile Include="Assets\Script\SB\ScreenFader.cs" />
     <Compile Include="Assets\Script\SB\Warp.cs" />
+    <Compile Include="Assets\Script\SB\Window.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
