--- a/Utopia (develop)-수정/Utopia (develop)-수정.csproj
+++ b/Utopia (develop)-수정/Utopia (develop)-수정.csproj
@@ -90,6 +90,8 @@
     <Compile Include="Assets\Script\HK\InputFieldManager.cs" />
     <Compile Include="Assets\Script\HK\InputManager.cs" />
     <Compile Include="Assets\Script\HK\Inventory.cs" />
+    <Compile Include="Assets\Script\HK\InventoryControl.cs" />
+    <Compile Include="Assets\Script\HK\InventoryJson.cs" />
     <Compile Include="Assets\Script\HK\MainScript.cs" />
     <Compile Include="Assets\Script\HK\MouseCursor.cs" />
     <Compile Include="Assets\Script\HK\UIManager.cs" />
