--- a/Utopia (develop)-수정/Utopia (develop)-수정.csproj
+++ b/Utopia (develop)-수정/Utopia (develop)-수정.csproj
@@ -98,6 +98,7 @@
     <Compile Include="Assets\Script\HK\VideoStream.cs" />
     <Compile Include="Assets\Script\JY\ActiveDialogue.cs" />
     <Compile Include="Assets\Script\JY\ControlDialogue.cs" />
+    <Compile Include="Assets\Script\JY\EventManager.cs" />
     <Compile Include="Assets\Script\SB\CameraFollow.cs" />
     <Compile Include="Assets\Script\SB\MazePlayerMovement.cs" />
     <Compile Include="Assets\Script\SB\NewBehaviourScript.cs" />
