jun->sung ver.2

--- a/Utopia (develop)-수정/Assembly-CSharp.csproj
+++ b/Utopia (develop)-수정/Assembly-CSharp.csproj
@@ -70,7 +70,7 @@
      <Compile Include="Assets\Script\SB\ScreenFader.cs" />
      <Compile Include="Assets\Script\SB\Warp.cs" />
  <Reference Include="Facebook.Unity.Settings">
- <HintPath>C:/Users/ge60/Desktop/UtoPia-7836ec39dd31010a58274cf714c993dba86fe900/UtoPia-7836ec39dd31010a58274cf714c993dba86fe900/Utopia (develop)-수정/Library/FacebookSDK/Facebook.Unity.Settings.dll</HintPath>
+ <HintPath>D:/test5/Utopia (develop)-수정/Library/FacebookSDK/Facebook.Unity.Settings.dll</HintPath>
  </Reference>
  <Reference Include="UnityEngine.UI">
  <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
@@ -94,7 +94,7 @@
  <HintPath>D:/Unity/Editor/Data/UnityExtensions/Unity/UnityVR/RuntimeEditor/UnityEngine.VR.dll</HintPath>
  </Reference>
  <Reference Include="LitJson">
- <HintPath>C:/Users/ge60/Desktop/UtoPia-7836ec39dd31010a58274cf714c993dba86fe900/UtoPia-7836ec39dd31010a58274cf714c993dba86fe900/Utopia (develop)-수정/Assets/Resources/LitJson.dll</HintPath>
+ <HintPath>D:/test5/Utopia (develop)-수정/Assets/Resources/LitJson.dll</HintPath>
  </Reference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
